[package]
name = "dinotree_sample"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"
description = "sample distribution for dinotree"
repository = "https://github.com/tiby312/dinotree_sample"
license = "MIT/Apache-2.0"
keywords = ["dinotree"]
readme = "readme.md"

[dependencies]
dists= "0.1.5"
new-ordered-float = "1.0.1"
axgeom = "1.0.5"
